--- a/sudokuSolver/manifest.yml
+++ b/sudokuSolver/manifest.yml
@@ -1,6 +1,7 @@
 applications:
-- name: SudokuSolver
+- name: sudokusolver
   buildpack: python_buildpack
-  memory: 512M
+  memory: 1999M
+  disk: 3G
   instances: 1
-  command: waitress-serve --port=8080 sudokuSolver.wsgi:application
+  command: waitress-serve --port=8080 sudokusolver.wsgi:application
