--- a/sudokuSolver/Dockerfile
+++ b/sudokuSolver/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app
 
 COPY . .
 
+RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install django
 RUN python3 -m pip install pillow
 RUN python3 -m pip install django-crispy-forms
