--- a/sudokuSolver/Dockerfile
+++ b/sudokuSolver/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install django
-RUN python3 -m pip install pillow
-RUN python3 -m pip install django-crispy-forms
+RUN pip3 install --upgrade pip
+RUN pip3 install django
+RUN pip3 install pillow
+RUN pip3 install django-crispy-forms
 RUN python3 -m pip install django-markdownx
 RUN python3 -m pip install django opencv-python
 RUN python3 -m pip install django numpy
