--- a/sudokuSolver/Dockerfile
+++ b/sudokuSolver/Dockerfile
@@ -11,8 +11,8 @@ RUN pip install django-crispy-forms
 RUN pip install django-markdownx
 RUN pip install django opencv-python
 RUN pip install django numpy
-RUN pip install torch==1.8.1
-RUN pip install torchvision==0.9.1
+RUN pip install torch
+RUN pip install torchvision
 RUN pip install whitenoise
 RUN pip install waitress
 
